k3s/apps/p3d-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p3d-app
  namespace: default
  labels:
    app.kubernetes.io/name: p3d-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: p3d-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: p3d-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - pi-1
      containers:
      - name: p3d-app
        image: registry.home/p3d-app:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - containerPort: 3000
            name: http
