k3s/apps/p3d-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p3d-app
  namespace: default
  labels:
    app.kubernetes.io/name: p3d-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: p3d-app
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
